# smithers

./: .gitignore  CLAUDE.md  README.md  list_store.py  pyproject.toml  test_retriever.py
.claude/: settings.local.json
src/: __init__.py
src/smithers/: __init__.py  agent.py  api.py  chain.py  config.py  main.py  models.py  schemas.py  server.py
src/smithers/rag/: __init__.py  indexer.py  retriever.py  vector_store.py
src/smithers/tools/: __init__.py  knowledge_search.py  surf_forecast.py
static/: index.html  smithers.avif
tests/: test_chain_integration.py  test_surf_forecast.py
