[project]
name = "smithers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "logfire",
    "langchain",
    "langchain-openai",
    "langchain-core",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff~=0.14.5",
]
